# ucsd_microcomputer_emulator

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
asm/: cb.z80  zbios.z80  zmon.z80  zmon_original.z80
disk/: asm.com  pip.com  stat.com  submit.com
disk_prepare/: clean.sh  prepare.sh
disk_prepare/contents/: extract.com  load.com
emscripten/: shell.html
emulator_src/: main.cpp  terminal.h  wd2793.h
emulator_src/emscripten/: shell.html
machine_src/asm/: README.md  altmon.z80  boot.z80
machine_src/disk/: ddt.com
src/: crt9028.h  crt9028_font.h  main.cpp  terminal.h  wd2793.h
tools/: build_disk_image.sh  combine.py
zbios/: build.sh  clean.sh  zbios.z80
zmon/: README.md  altmon.z80  build.sh  build_alt.sh  clean.sh  zmon.z80  zmon_original.z80
